fixing gap button navbar & resize image why choos us

--- a/src/App.css
+++ b/src/App.css
@@ -402,7 +402,7 @@ body {
   }
 
   .box-radius-image-location {
-    border-top-right-radius: 135px;
+    border-top-right-radius: 150px;
   }
   .box-desc-title {
     display: flex;
@@ -498,7 +498,7 @@ body {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.9); /* Semi-transparent black overlay */
+  background-color: black; /* Semi-transparent black overlay */
   z-index: 9999;
 }
 
